--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "formidable": "^2.0.1",
     "hbs": "^4.2.0",
     "jsdom": "^19.0.0",
     "mongo": "^0.1.0",
