--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongo": "^0.1.0",
     "mongodb": "^4.4.0",
     "multer": "^1.4.4",
+    "node": "^17.5.0",
     "nodemon": "^2.0.15"
   }
 }
