--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^4.4.0",
     "multer": "^1.4.4",
     "node": "^17.5.0",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15"
   }
 }
