--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "node": "^17.5.0",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15"
+  },
+  "engines": { 
+      "node": "16.13.0" 
   }
 }
